[tool.poetry]
name = "plasticwrap"
version = "0.1.0"
description = "A simple wrapper for the Plastic SCM API."
authors = ["Samuel Bruce <11494533+samuelbruce@users.noreply.github.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.28.1"

[tool.poetry.group.dev.dependencies]
requests = "2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
